[gd_scene load_steps=5 format=3 uid="uid://cfd22e7odavyq"]

[ext_resource type="Script" path="res://scripts/leaderboard.gd" id="1_ogiss"]
[ext_resource type="FontFile" uid="uid://cditnl3ksh5cj" path="res://assets/fonts/press_start_2p/PressStart2P.ttf" id="2_najao"]
[ext_resource type="Texture2D" uid="uid://bpwlmhjjruckw" path="res://assets/Death Kanji-small.png" id="3_dtjby"]

[sub_resource type="Theme" id="Theme_82jbx"]
default_font = ExtResource("2_najao")
default_font_size = 10

[node name="Leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_82jbx")
script = ExtResource("1_ogiss")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(400, 300)
layout_mode = 0
offset_right = 400.0
offset_bottom = 300.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LineEdit" type="LineEdit" parent="ColorRect/VBoxContainer"]
layout_mode = 2
placeholder_text = "type your name"
max_length = 10
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
flat = true
caret_blink = true

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="NameColumnLabel" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Player Name"

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(38.02, 0)
layout_mode = 2

[node name="ScoreColumnLabel" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Player Score"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2

[node name="PlayerNames" type="ItemList" parent="ColorRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
focus_mode = 0
mouse_filter = 2
mouse_force_pass_scroll_events = false
allow_search = false

[node name="PlayerScores" type="ItemList" parent="ColorRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
focus_mode = 0
mouse_filter = 2
allow_search = false
text_overrun_behavior = 0

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_left = 197.0
offset_top = 74.0
offset_right = 397.0
offset_bottom = 224.0
texture = ExtResource("3_dtjby")

[connection signal="text_submitted" from="ColorRect/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
